-Fixed to be compatible with wubiq changes.